--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-hot-boilerplate",
+  "name": "Launchr",
   "version": "1.0.0",
-  "description": "Boilerplate for ReactJS project with hot code reloading",
+  "description": "Launchr which is a SPA with react and Redux",
   "scripts": {
     "start": "node server.js",
     "lint": "eslint src"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gaearon/react-hot-boilerplate.git"
+    "url": "https://github.com/JJVvV/launchr.git"
   },
   "keywords": [
     "react",
@@ -21,12 +21,9 @@
     "edit",
     "webpack"
   ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
+  "author": "Alex Liu <drowning524@gmail.com> (http://github.com/JJVvV)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
-  },
-  "homepage": "https://github.com/gaearon/react-hot-boilerplate",
+
   "devDependencies": {
     "babel-core": "^5.6.17",
     "babel-eslint": "^3.1.9",
