--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   ],
   "author": "Alex Liu <drowning524@gmail.com> (http://github.com/JJVvV)",
   "license": "MIT",
-
   "devDependencies": {
     "babel-core": "^5.6.17",
     "babel-eslint": "^3.1.9",
@@ -59,6 +58,7 @@
     "body-parser": "^1.13.1",
     "classnames": "^2.1.3",
     "es6-promise": "^2.3.0",
+    "fullcalendar": "^2.3.1",
     "jquery": "^2.1.4",
     "jsonwebtoken": "^5.0.2",
     "lodash": "3.9.3",
