--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "classnames": "^2.1.3",
     "es6-promise": "^2.3.0",
     "fullcalendar": "^2.3.1",
+    "isomorphic-fetch": "^2.1.1",
     "jquery": "^2.1.4",
     "jsonwebtoken": "^5.0.2",
     "lodash": "3.9.3",
@@ -68,8 +69,10 @@
     "object-assign": "^3.0.0",
     "pubsub-js": "^1.5.2",
     "react": "^0.13.0",
+    "react-redux": "^0.9.0",
     "react-router": "^1.0.0-beta3",
-    "redux": "^0.12.0",
+    "redux": "^1.0",
+    "redux-thunk": "^0.1.0",
     "reflux": "^0.2.7",
     "reqwest": "^1.1.5",
     "superagent": "1.2.0",
